# ch_pipeline

./: .gitattributes  .gitignore  .readthedocs.yml  .requirements-travis.txt  .travis.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  crosstalk_map_maker.ipynb  mkvenv.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml  main.yml  sphinx.yaml  sphinx.yml
ch_pipeline/: __init__.py  _regrid_work.pyx  _version.py  big_patch.patch  calibration.py  chimepipe.py  dataquery.py  dataspec.py  inputmap.py  mapmaker.py  pathfinder.py  plot_tools.py  rfi.py  simulate.py
ch_pipeline/analysis/: __init__.py  beam.py  calibration.py  crosstalk.py  decorrelation.py  flagging.py  fringestop.py  jackknife.py  jupiter.py  mapmaker.py  radiometer_test.py  sidereal.py  solar.py  source_removal.py  spectral_lines.py  timing.py  transform.py  weather.py
ch_pipeline/core/: __init__.py  containers.py  dataquery.py  filemanagement.py  io.py  pathfinder.py  processed_db.py  task.py  telescope.py
ch_pipeline/data/: datasets.yaml
ch_pipeline/hfb/: __init__.py  analysis.py  compress.py  containers.py  flagging.py  hfb_target_list.json  io.py  pfb.py  sidereal.py
ch_pipeline/processing/: __init__.py  base.py  beam.py  client.py  daily.py  fullstack.py  hfb.py  hfb_compress.py  holoflag.py  quarterstack.py  reprocess.py  runner.py  sidereal.py
ch_pipeline/synthesis/: __init__.py  crosstalk.py  crosstalk.py~  gain.py  inject.py  noise.py  stream.py  suscept.npy  suscept_3ps_0.5ps.npy  suscept_3ps_1ps.npy  suscept_4.5ps_1ps.npy  tempgains.py  timingerrors.py
ch_pipeline/util/: plot.py  regrid.py
config/: chimetest.yaml
doc/: Makefile  conf.py  dev.rst  reference.rst  requirements.txt
doc/_autosummary/: ch_pipeline.analysis.beam.rst  ch_pipeline.analysis.calibration.rst  ch_pipeline.analysis.flagging.rst  ch_pipeline.analysis.fringestop.rst  ch_pipeline.analysis.mapmaker.rst  ch_pipeline.analysis.rst  ch_pipeline.analysis.sidereal.rst  ch_pipeline.analysis.solar.rst  ch_pipeline.core.containers.rst  ch_pipeline.core.dataquery.rst  ch_pipeline.core.io.rst  ch_pipeline.core.pathfinder.rst  ch_pipeline.core.telescope.rst  ch_pipeline.processing.base.rst  ch_pipeline.processing.beam.rst  ch_pipeline.processing.client.rst  ch_pipeline.processing.daily.rst  ch_pipeline.synthesis.rst  ch_pipeline.synthesis.timingerrors.rst
docs/: .buildinfo  dev.html  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorial.html
docs/.doctrees/: dev.doctree  environment.pickle  index.doctree  reference.doctree  tutorial.doctree
docs/.doctrees/_autosummary/: ch_pipeline.analysis.beam.doctree  ch_pipeline.analysis.calibration.doctree  ch_pipeline.analysis.doctree  ch_pipeline.analysis.flagging.doctree  ch_pipeline.analysis.fringestop.doctree  ch_pipeline.analysis.mapmaker.doctree  ch_pipeline.analysis.sidereal.doctree  ch_pipeline.analysis.solar.doctree  ch_pipeline.analysis.source_removal.doctree  (+14 more)
docs/_autosummary/: ch_pipeline.analysis.beam.html  ch_pipeline.analysis.calibration.html  ch_pipeline.analysis.flagging.html  ch_pipeline.analysis.fringestop.html  ch_pipeline.analysis.html  ch_pipeline.analysis.mapmaker.html  ch_pipeline.analysis.sidereal.html  ch_pipeline.analysis.solar.html  ch_pipeline.analysis.source_removal.html  ch_pipeline.analysis.timing.html  ch_pipeline.core.containers.html  ch_pipeline.core.dataquery.html  ch_pipeline.core.html  ch_pipeline.core.io.html  ch_pipeline.core.pathfinder.html  ch_pipeline.core.telescope.html  ch_pipeline.processing.base.html  ch_pipeline.processing.beam.html  ch_pipeline.processing.client.html  ch_pipeline.processing.daily.html  ch_pipeline.processing.html  ch_pipeline.synthesis.html  ch_pipeline.synthesis.timingerrors.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  tutorial.rst.txt
examples/: calibration_pipeline.yaml  construct_timing_correction.yaml  gain_error_pipeline.yaml  noise_calibration.yaml  pipeline_solar.yaml  test.yaml  test_dataflagger.yaml  test_decorr_cyl.yaml
(+38 files in other folders)
